2007-04-09  Brian Matherly  <brian@gramps-project.org>
	* src/Config/_GrampsIniKeys.py: Remove file check - it is not needed.

2007-04-09  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/Checkpoint.py: missing comma in Checkpoint.py.

2007-04-08  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0001006: Narrative Web: Media objects missing
	  title (description), mime_type, or path, are displayed poorly.

2007-04-08  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py (DisplayState.__init__): allocate 15 spaces for match label

2007-04-08  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000896: Crash running Narrative Web report -
	  system memory exhausted.

2007-04-07  Don Allingham  <don@gramps-project.org>
	* src/plugins/Checkpoint.py: update from 2.2
	* src/GrampsDb/_GrampsDbWriteXML.py: clean up
	* src/Editors/_EditPrimary.py: prevent double OK clicks
	* src/Editors/_EditPlace.py: prevent double OK clicks
	* src/Editors/_EditSource.py: prevent double OK clicks
	* src/Editors/_EditPerson.py: prevent double OK clicks
	* src/Editors/_EditRepository.py: prevent double OK clicks
	* src/Editors/_EditFamily.py: prevent double OK clicks
	* src/Editors/_EditEvent.py: prevent double OK clicks

2007-04-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000998: Source Ref link refers to nothing in
	  Narrative web report.

2007-04-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000996: Individual attributes do no include
	  source reference citations in Narrative Web report.

2007-04-04  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/Checkpoint.py: 0000993: Checkpoint tool crashes in Windows

2007-04-04  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidgets.py (Statusbar): min width given in #chars;
	right alignment of a bar is enabled.
	* src/DisplayState.py (DisplayState.__init__): statusbar creation